--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,12 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^1.0.0
   json_serializable: ^2.0.0
+  flutter_launcher_icons: "^0.7.0"
+
+flutter_icons:
+    android: "launcher_icon"
+    ios: true
+    image_path: "assets/logo.jpg"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
